Revert "fix(1253): remove `z-index` and rely on `initial` (#1270)"
This reverts commit b344e3454d88cf5622663e50b053d8622a9554c9.

--- a/src/IconWithOptions/IconWithOptions.scss
+++ b/src/IconWithOptions/IconWithOptions.scss
@@ -4,6 +4,7 @@
   position: relative;
   display: flex;
   justify-content: center;
+  z-index: 0;
 
   &.hover .icon-wrapper {
     svg path {
